@@ -6,3 +6,5 @@ Revision history for Perl extension Template::Stash::AutoEscape
 0.02    Tue Jun 08 18:28:37 2010
         - fix requires
         - now [% hash.item(key) %] works as [% hash.item(key.raw) %] by default.
+
+        - Add the 'die_on_unescaped' and 'method_for_escape' options.
